TeamGB case study

--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -39,6 +39,9 @@ h2
     font-family: 'BodyBold'
     font-size: 0.8em
     letter-spacing: 0.015em
+  .small:hover
+    color: $pink
+    text-decoration: underline
 
 h3
   font-family: 'Header'
@@ -56,6 +59,12 @@ p
 b
   font-family: 'BodyBold'
   letter-spacing: 0.02em
+
+h4
+    font-family: 'Feature'
+    font-size: 1em
+    color: $pink
+    letter-spacing: 0.1em
 
 
 a
@@ -95,6 +104,24 @@ a
     font-family: 'Feature'
     text-align: center
     letter-spacing: 0.02em
+
+    span.special-char
+      font-family: 'BodyBold'
+      margin: 0 -0.2em
+
+    span.small
+      font-size: 0.5em
+      letter-spacing: -2em
+      vertical-align: middle
+      margin-left: -0.5em
+
+
+  .small
+    font-size: 0.85em
+    font-family: 'Feature'
+    text-align: center
+    letter-spacing: 0.02em
+
 
 .highlight-blue,
 .highlight-pink
