--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -131,6 +131,13 @@ html, body
     text-align: right
     text-shadow: 2px 2px $blue
 
+.hero-header-left
+  padding: 0 45% 0 5%
+  top: 50vh
+  p
+    color: $lightblue
+    text-shadow: 2px 2px $blue
+
 
 @media (max-width: 1250px)
 
