--- a/assets/css/media.sass
+++ b/assets/css/media.sass
@@ -5,12 +5,9 @@
   max-width: 100%
   border: 7px solid $blue
   background: black
-
-.short
-  padding-bottom: 85%
-
-.long
-  padding-bottom: 96%
+  .overlay
+    .play
+      width: 5em
 
 .mobile
   width: 65%
@@ -20,6 +17,49 @@
   width: 90%
   margin-left: 5%
   padding-bottom: 89%
+
+.wrapper-mobile
+  padding-bottom: 60%
+  width: 65%
+  margin: 0 auto
+
+.x-squash
+  width: 75%
+  margin-left: 5%
+  padding-bottom: 72%
+  margin-top: -1.5em
+
+.short
+  padding-bottom: 85%
+
+.long
+  padding-bottom: 96%
+
+.wrapper-mobile
+  padding-bottom: 60%
+  width: 65%
+  margin: 0 auto
+
+.sort-of-short
+  padding-bottom: 75%
+
+.x-short
+  padding-bottom: 55%
+
+.half-width-l
+  width: 40%
+  margin-right: 5%
+  float: left
+
+.half-width-r
+  float: left
+  margin-right: 5%
+  width: 48%
+  padding-bottom: 80%
+
+
+iframe
+  background: $blue
 
 .embed-container iframe,
 .embed-container object,
