--- a/views/about.haml
+++ b/views/about.haml
@@ -20,9 +20,7 @@
               %p
                 We are
                 %b.text-highlight digital natives
-                We live and breathe social content. Our production
-                %b.text-highlight serves the stories we tell
-                We are led by story, not by production.
+                We live and breathe social content. 
 
               %p
                 We aren't
