--- a/views/case-studies/big-and-bold/solution_section.haml
+++ b/views/case-studies/big-and-bold/solution_section.haml
@@ -66,6 +66,7 @@
 
                 .embed-container.long.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
+                  .overlay
                 .sub.media-mobile
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -88,6 +89,7 @@
 
                 .embed-container.long
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
+                  .overlay
                 .sub
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -119,6 +121,7 @@
               .five.columns.media-mobile
                 .embed-container.short
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
             .row
               .seven.columns.quick-expand
@@ -146,6 +149,7 @@
               .five.offset-by-one.columns
                 .embed-container.short
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 
 
