--- a/views/case-studies/campaigns/header.haml
+++ b/views/case-studies/campaigns/header.haml
@@ -1,11 +1,11 @@
 .section.section-large#secondPage
 
-  .hero-header
+  .hero-header.hero-header-left
     %p
-      Superfans
+      The Winter Games 2018
       %br
       %span.sub
-        Panasonic
+        Team GB
 
   .overlay
-  .header-image{ :style => "background-image: url('/assets/img/case-studies/campaigns/header-img.png')"}
+  .header-image.header-image-right{ :style => "background-image: url('/assets/img/case-studies/campaigns/header-img.jpg')"}
