--- a/views/case-studies/campaigns/result.haml
+++ b/views/case-studies/campaigns/result.haml
@@ -13,21 +13,34 @@
           .row
             .result-block.blue
               .result
-                %h5 585k
+                %h5 
+                  4
+                  %span.special-char .
+                  3
+                  %span.small m
                 %p Views
             .result-block.white
               .result
-                %h5 5k
+                %h5 
+                  97
+                  %span.small k
                 %p Engagement
             .result-block.blue
               .result
-                %h5 224
-                %p Comments
+                %h5 
+                  22
+                  %span.small m
+                %p Impressions
             .result-block.white
               .result
-                %h5 600
-                %p Superfans
-          .row
-            %h2.pink.result-additional Media Coverage: Future Sport  |  Digital Sport  |  Campaign  |  The Drum
-
+                %h5
+                  .small
+                    0
+                    %span.special-char .
+                    004
+                    %span.small p 
+                %p
+                  per view
+                  %br 
+                    ROI
 
