--- a/views/case-studies/campaigns/solution_section.haml
+++ b/views/case-studies/campaigns/solution_section.haml
@@ -10,26 +10,28 @@
             .row
               .tablet-header.blue-bg
                 %h1
-                  The Solutios
+                  The Solution
             .row
-              .seven.columns
+              .twelve.columns.quick-expand
+                %p 
+                  Our winter athletes perhaps don’t share the same profile as their summer counterparts, so the challenge was to connect the Team GB audience with a group of athletes that they previously had little knowledge of.
+                  %br
+                  %br
+                  But before we did that, we needed to kick the campaign off with a bang….
+                  %br
+                  %br
+
+
                 %h2
-                  Nuke’em
+                  One Year to Go - 
+                  %a.small.pink.pink{"data-lity" => "", :href => "//vimeo.com/203277091"} WATCH 
                 %p
-                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to the wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
-
-                %p
-                  We split the UGC options into two separate categories, high commitment and low commitment. This allowed light touch participation as well as more elaborate efforts, giving the audience the ability to decide how they wished to interact with Team GB.
-
-                %h2
-                  Launch
-                %p
-                  We kicked off the campaign by creating a self aware ‘walk & talk’ launch piece with Gold Medalist Amy Williams. This was built around the multiple UGC that Team GB fans could create to demonstrate their Superfan status.
+                  Team GB’s winter athletes have come a long way in the last 30 years, so we set out to tell the story of Team GB over the decades and build anticipation of this exciting new crop of athletes that were set to make history.
+                  %br
+                  %br 
+                  This piece generated 250k organic views. An incredible result!
 
 
-      .four.offset-by-seven.columns.ksi.media-mobile
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.png"}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -40,22 +42,17 @@
           .inner
             .row
               .seven.columns
-                %h2
-                  Nuke’em
-                %p
-                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to the wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
-
-                %p
-                  We split the UGC options into two separate categories, high commitment and low commitment. This allowed light touch participation as well as more elaborate efforts, giving the audience the ability to decide how they wished to interact with Team GB.
-
-                %h2
-                  Launch
-                %p
-                  We kicked off the campaign by creating a self aware ‘walk & talk’ launch piece with Gold Medalist Amy Williams. This was built around the multiple UGC that Team GB fans could create to demonstrate their Superfan status.
+                %h2 
+                  Our Approach
+                %p 
+                  Our winter athletes perhaps don’t share the same profile as their summer counterparts, so the challenge was to connect the Team GB audience with a group of athletes that they previously had little knowledge of.
+                  %br
+                  %br
+                  But before we did that, we needed to kick the campaign off with a bang….
 
       .four.offset-by-seven.columns.ksi
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.png"}
+        .embed-container.long
+          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.gif"}
 
 .section
   .sub-section.sub-section-mobile
@@ -64,22 +61,88 @@
         .middle
           .inner
             .row
-              .five.columns
 
-                .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215990007?background=1", :webkitallowfullscreen => ""}
+              .twelve.columns.quick-expand
 
-              .seven.columns
                 %h2
-                  The Campaign
+                  Ones to Watch
+                %p 
+                  We set out to build the profile of 10 specific winter athletes running up to the games. We achieved this through mobile optimised 60 second profiles that married the athlete’s own social media posts with visual effects. 
+                  %br
+                  These generated over 100k views each.
+
+                .embed-container.wrapper-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/219507067?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/219507067"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+
+                %br
+                %h2
+                  Path to PyeongChang - 
+                  %a.small.pink{"data-lity" => "", :href => "//vimeo.com/250096692"} WATCH 
                 %p
-                  As part of the campaign we filmed with some of Team GB’s Superfans, created a ‘How To’ series and a film of Team GB athletes expressing their thanks to the Superfans with some fine lip syncing skills.
+                  After we had introduced some of the key athletes we moved on to illustrating their stories whilst offering insights into their unique personalities. 
+
+  .sub-section.sub-section-desktop
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .six.columns
+                %h2 
+                  One Year to Go
+
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/203277091?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/203277091"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+
                 %p
-                  All of this content was pulled together into a central campaign page on Team GB’s website https://www.teamgb.com/superfans.
+                  %br
+                  Team GB’s winter athletes have come a long way in the last 30 years, so we set out to tell the story of Team GB over the decades and build anticipation of this exciting new crop of athletes that were set to make history.
                 %p
-                  We wrapped the campaign by creating a Social Media wall animation that showcased all of the incredible content produced by fans as part of the campaign.
+                  This piece generated 250k organic views. An incredible result!
+
+              .five.offset-by-one.columns
+                %h2
+                  Ones to Watch
                 %p
-                  Phew!
+                  We set out to build the profile of 10 specific winter athletes running up to the games. We achieved this through mobile optimised 60 second profiles that married the athlete’s own social media posts with visual effects. 
+                  %br
+                  %br 
+                  These generated over 100k views each.
+
+                .embed-container.x-squash
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/219507067?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/219507067"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+
+.section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .twelve.columns.quick-expand
+              
+                %h2
+                  Athlete Stat Cards
+                %p 
+                  During the games, Team GB needed to announce which individual athletes we’re competing and when. To do this we created individual stat cards for over 70 athletes that featured key stats and showcased their personality.
+
+                .embed-container.wrapper-mobile.sort-of-short.half-width-r
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/265170168?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/265170168"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+                %p.half-width-l
+                  This content series was deemed to be so strong, it was sold to Aldi as a sponsorship opportunity. A landmark moment in how Team GB optimise commercial opportunities for content. 
+
 
 
   .sub-section.sub-section-desktop
@@ -88,27 +151,139 @@
         .middle
           .inner
             .row
+
               .five.columns
-
-                .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215990007?background=1", :webkitallowfullscreen => ""}
-
-              .seven.columns
                 %h2
-                  The Campaign
+                  Path to PyeongChang
                 %p
-                  As part of the campaign we filmed with some of Team GB’s Superfans, created a ‘How To’ series and a film of Team GB athletes expressing their thanks to the Superfans with some fine lip syncing skills.
+                  After we had introduced some of the key athletes we moved on to illustrating their stories whilst offering insights into their unique personalities. 
+
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/250096692?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/250096692"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+              .six.offset-by-one.columns
+                %h2 
+                  Athlete Stat Cards
+
+                %p.half-width-l
+                  During the games, Team GB needed to announce which individual athletes we’re competing and when. To do this we created individual stat cards for over 70 athletes that featured key stats and showcased their personality.
+                  %br 
+                  %br
+                  This content series was deemed to be so strong, it was sold to Aldi as a sponsorship opportunity. A landmark moment in how Team GB optimise commercial opportunities for content. 
+
+                .embed-container.sort-of-short.half-width-r
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/265170168?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/265170168"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+
+.section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .twelve.columns.quick-expand
+                  
+                %h2
+                  360 Team Announcements  - 
+                  %a.small.pink{"data-lity" => "", :href => "//vimeo.com/246404832"} WATCH 
                 %p
-                  All of this content was pulled together into a central campaign page on Team GB’s website https://www.teamgb.com/superfans.
+                  Team announcements leading up to the games are a key opportunity to drive awareness of the individual sports. We created an innovative solution which announced each team online through a 360 video. 
+
+                %h2
+                  Digital Displays
+                %p 
+                  Before, during and after the games, we produced a series of pieces that were featured on massive outdoor digital displays up and down the country. We even took over Piccadilly Circus as we welcomed home our heroes.
+
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/253759404?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/253759404"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+  .sub-section.sub-section-desktop
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+
+              .five.columns
+                %h2
+                  360 Team Announcements
                 %p
-                  We wrapped the campaign by creating a Social Media wall animation that showcased all of the incredible content produced by fans as part of the campaign.
+                  Team announcements leading up to the games are a key opportunity to drive awareness of the individual sports. We created an innovative solution which announced each team online through a 360 video. 
+
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/246404832?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/246404832"}
+                    %img.play{:src => "../assets/img/play.png"}
+
+              .six.offset-by-one.columns
+                %h2 
+                  Digital Displays
+
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/253759404?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/253759404"}
+                    %img.play{:src => "../assets/img/play.png"}
+
                 %p
-                  Phew!
+                  %br
+                  Before, during and after the games, we produced a series of pieces that were featured on massive outdoor digital displays up and down the country. We even took over Piccadilly Circus as we welcomed home our heroes.
 
 
 
+.section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .twelve.columns.quick-expand
 
+                %h2
+                  Steep & Chill
+                %p
+                  To top it all off, we went out with a bang with a seven part series called Steep & Chill. Working with H&K and DFS, we produced a series of comedy gaming episodes. These pieces ran during and after the games bringing our athletes to a whole new audience.
+                  %br
+                  %br
+                  The Steep & Chill series generated over 1 million views.
+                  %br
+                  %br
+                
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/257931219?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/257931219"}
+                    %img.play{:src => "../assets/img/play.png"}
 
+  .sub-section.sub-section-desktop
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+
+              .four.columns
+                %h2
+                  Steep & Chill
+                %p
+                  To top it all off, we went out with a bang with a seven part series called Steep & Chill. Working with H&K and DFS, we produced a series of comedy gaming episodes. These pieces ran during and after the games bringing our athletes to a whole new audience.
+
+                  %br
+                  %br
+                  The Steep & Chill series generated over 1 million views.
+
+              .seven.offset-by-one.columns
+                
+                .embed-container.x-short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/257931219?background=1", :webkitallowfullscreen => ""}
+                  %a.overlay{"data-lity" => "", :href => "//vimeo.com/257931219"}
+                    %img.play{:src => "../assets/img/play.png"}
 
 
 
