--- a/views/case-studies/digital-influencer/solution_section.haml
+++ b/views/case-studies/digital-influencer/solution_section.haml
@@ -33,6 +33,7 @@
               .five.columns
                 .embed-container.squash.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -64,6 +65,7 @@
               .five.columns
                 .embed-container.squash.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 .section
   .sub-section.sub-section-mobile
@@ -76,6 +78,7 @@
 
                 .embed-container.long.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns.quick-expand
 
@@ -112,6 +115,7 @@
 
                 .embed-container.long
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns
                 %h2
@@ -145,6 +149,7 @@
               .five.columns.media-mobile
                 .embed-container.mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns.quick-expand
                 .quote.quote-long
@@ -171,6 +176,7 @@
               .five.offset-by-one.columns
                 .embed-container.mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 
 
