--- a/views/case-studies/digital-strategy/solution_section.haml
+++ b/views/case-studies/digital-strategy/solution_section.haml
@@ -31,6 +31,7 @@
               .five.columns
                 .embed-container.media-mobile.squash
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175022?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 
   .sub-section.sub-section-desktop
@@ -60,6 +61,7 @@
               .five.columns
                 .embed-container.media-mobile.squash
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175022?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 
 .section
@@ -72,6 +74,7 @@
               .four.columns
                 .embed-container.long.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175345?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .eight.columns
 
@@ -93,6 +96,7 @@
 
                 .embed-container.long
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175345?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns
 
@@ -114,6 +118,7 @@
               .five.columns.media-mobile
                 .embed-container.long
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175492?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns
                 %h2 Membership
@@ -146,6 +151,7 @@
               .five.columns
                 .embed-container.long
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175492?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 
 
