--- a/views/case-studies/small-and-nimble/solution_section.haml
+++ b/views/case-studies/small-and-nimble/solution_section.haml
@@ -29,6 +29,7 @@
               .five.columns
                 .embed-container.squash.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214290937?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -55,6 +56,7 @@
               .five.columns
                 .embed-container.squash.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214290937?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
 .section
   .sub-section.sub-section-mobile
@@ -67,6 +69,7 @@
 
                 .embed-container.long.media-mobile
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214291312?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns
 
@@ -95,6 +98,7 @@
 
                 .embed-container.long
                   %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214291312?background=1", :webkitallowfullscreen => ""}
+                  .overlay
 
               .seven.columns
 
