--- a/views/contact.haml
+++ b/views/contact.haml
@@ -16,7 +16,7 @@
           %h2
             Contact us on
           %p
-            Tel: 020 72414432
+            Tel: 020 7684 9872
             %br
             Mob: 07855259898
             %br
@@ -40,7 +40,7 @@
           %h2
             Find us at
           %p
-            TANJUN MEDIA, UNIT 5,
+            TANJUN MEDIA, UNIT 7,
             %br
             1C SHELFORD PLACE, LONDON, N16
         .four.offset-by-four.columns
