--- a/assets/css/nav.sass
+++ b/assets/css/nav.sass
@@ -31,6 +31,7 @@ label
   list-style: none
   display: inline-block
   margin-top: 2em
+  margin-bottom: 0
   li
     display: inline-block
     float: left
