--- a/views/case-studies/campaigns/problem.haml
+++ b/views/case-studies/campaigns/problem.haml
@@ -15,87 +15,39 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
-                  %p.brand.panasonic Panasonic:
+                  %p.brand.team-gb Team GB:
                   %p.chat
-                    You guys seem alright! Wanna work on a
-                    %b UGC campaign
-                    for us?
+                    %b Winter 
+                    is coming.
                 .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
                   %p.brand.tanjun Tanjun:
                   %p.chat
-                    YES! We would like that very much.
-                    %b Thank you!
+                    Haha yeah we like Game of Thrones also!!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
-                  %p.brand.panasonic Panasonic:
+                  %p.brand.team-gb Team GB:
                   %p.chat
-                    Great! We want you to
-                    %b develop a campaign around Team GB’s ‘Superfans’.
-                    Aim is to create
-                    %b excitement
-                    around the
-                    %b support for Team GB
-                    , building up to and during the Olympic Games.
+                    No! Winter is coming! We’re approaching 
+                    %b one year until the Winter Olympics 
+                    and we want you guys to create 
+                    %b all of the content 
+                    for the campaign.
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
                   %p.brand.tanjun Tanjun:
                   %p.chat
-                    Well that sounds
-                    %b A…mazing!
-                    Any other requirements?
+                    Blimey! That’s great! BTW we’ve actually never watched Game of Thrones. 
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
-                  %p.brand.panasonic Panasonic:
+                  %p.brand.team-gb Team GB:
                   %p.chat
-                    Yep! You need to put the Panasonic
-                    %b brand at the heart
-                    of this period of
-                    %b celebration
-                    and support.
-
-
-
-.section
-  .sub-section
-    .outer
-      .middle
-        .inner
-
-          .row
-            .twelve.columns.split-50-50
-
-              .chat-block
-                .highlight.highlight-pink.triangle-border.right.single.chat-2-1.chat-right-2
+                    Dragons and naked girls basically, you’re not missing much! Anyway, we really want to 
+                    %b ramp our content up 
+                    and create the same 
+                    %b buzz 
+                    there is around the Summer Games.
+                .highlight.highlight-pink.triangle-border.right.chat-1-6.chat-right
                   %p.brand.tanjun Tanjun:
                   %p.chat
-                    We thought you might say that!
-                    %b Don’t worry!
-                    We know exactly what needs to be done here.
-                    %b To the Bat Cave!!
-
-              .chat-block
-                .highlight.highlight-blue.triangle-border.left.chat-2-2.chat-left-2
-                  %p.brand.panasonic Panasonic:
-                  %p.chat
-                    %b Errr…
-                    you have a bat cave? Maybe we’re paying you too much?
-                .highlight.highlight-pink.triangle-border.right.chat-2-3.chat-right-2
-                  %p.brand.tanjun Tanjun:
-                  %p.chat
-                    It’s not strictly a
-                    %b cave
-                    \. More an office/studio thingy with an iMac and a collection of
-                    %b tatty 80s film memorabilia!
-
-              .chat-block
-                .highlight.highlight-blue.triangle-border.left.chat-2-4.chat-left-2
-                  %p.brand.panasonic Panasonic:
-                  %p.chat
-                    Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more!
-                    %b Now get to work monkeys!
-                .highlight.highlight-pink.triangle-border.right.chat-2-5.chat-right-2
-                  %p.brand.tanjun Tanjun:
-                  %p.chat
-                    %b Monkeys!!!
-                    To your typewriters!!
+                    No problem. Our monkeys can adapt to any climate! Let’s hit the slopes.
