Update about us content

--- a/views/about.haml
+++ b/views/about.haml
@@ -21,6 +21,7 @@
                 We are
                 %b.text-highlight digital natives
                 We live and breathe social content. 
+                We are led by story, not by production.
 
               %p
                 We aren't
