Add new digital campaigns video reel

--- a/views/case-studies/campaigns/video.haml
+++ b/views/case-studies/campaigns/video.haml
@@ -1,10 +1,10 @@
 .section.section-large
 
-  / .lity-iframe-container.lity-hide
-  /   %iframe{:allowfullscreen => "", :webkitallowfullscreen => "", :mozallowfullscreen => "", :frameborder => "0", :src => "https://player.vimeo.com/video/203277091"}
+  .lity-iframe-container.lity-hide
+    %iframe{:allowfullscreen => "", :webkitallowfullscreen => "", :mozallowfullscreen => "", :frameborder => "0", :src => "https://player.vimeo.com/video/266885189"}
 
-  / %a.play-btn{"data-lity" => "", :href => "//vimeo.com/191177712"}
-  /   %p Play!
+  %a.play-btn{"data-lity" => "", :href => "//vimeo.com/266885189"}
+    %p Play!
 
   .overlay
   %video#vid{:loop => "", :muted => "", :preload => "none", :playsinline => "", :poster => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/campaigns/campaigns-2/hero.png"}
